@@ -1,5 +1,12 @@
 2014-01-09  Richard Sandiford  <rdsandiford@googlemail.com>
 
+	* config/mips/mips.h (ISA_HAS_WSBH): Define.
+	* config/mips/mips.md (UNSPEC_WSBH, UNSPEC_DSBH, UNSPEC_DSHD): New
+	constants.
+	(bswaphi2, bswapsi2, bswapdi2, wsbh, dsbh, dshd): New patterns.
+
+2014-01-09  Richard Sandiford  <rdsandiford@googlemail.com>
+
 	PR rtl-optimization/59137
 	* reorg.c (steal_delay_list_from_target): Call update_block for
 	elided insns.
